--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     <img class="menu-img" src="https://cdn.pixabay.com/photo/2016/11/22/19/08/hangers-1850082_960_720.jpg">
                     <article class="menu-info">
                         <h3>Футболки, кофти та куртки</h3>
-                        <p class="menu-text">Різних колярів та прентів</p>
+                        <p class="menu-text">Різних кольорів та принтів</p>
                         <p class="sallary">180 грн-1700 грн </p>
                         <a class="order" href="">Замовити</a>
                     </article>
@@ -41,7 +41,7 @@
                     <img class="menu-img" src="https://cdn.pixabay.com/photo/2013/07/25/11/52/clothes-166848_960_720.jpg">
                      <article class="menu-info">
                         <h3>Штани</h3>
-                        <p class="menu-text">Різних колярів та прентів</p>
+                        <p class="menu-text">Різних кольорів та принтів</p>
                         <p class="sallary">210 грн-800грн </p>
                         <a class="order" href="">Замовити</a>
                     </article>
@@ -50,7 +50,7 @@
                     <img class="menu-img" src="https://media.istockphoto.com/id/1280933887/uk/%D1%84%D0%BE%D1%82%D0%BE/%D0%B7%D0%B5%D0%BB%D0%B5%D0%BD%D0%B8%D0%B9-%D0%B2%D0%BE%D0%B2%D0%BD%D1%8F%D0%BD%D0%B8%D0%B9-%D1%88%D0%B0%D1%80%D1%84-%D0%B6%D0%BE%D0%B2%D1%82%D0%B0-%D0%B2%D1%8F%D0%B7%D0%B0%D0%BD%D0%B0-%D1%88%D0%B0%D0%BF%D0%BA%D0%B0-%D1%96-%D1%80%D1%83%D0%BA%D0%B0%D0%B2%D0%B8%D1%87%D0%BA%D0%B8-%D0%B2%D0%B8%D0%B4%D1%96%D0%BB%D0%B5%D0%BD%D1%96-%D0%BD%D0%B0-%D0%B1%D1%96%D0%BB%D0%BE%D0%BC%D1%83-%D1%82%D0%BB%D1%96-%D0%BF%D0%BB%D0%BE%D1%81%D0%BA%D0%BE-%D0%B2%D1%96%D0%B4%D0%BA%D0%BB%D0%B0%D1%81%D1%82%D0%B8.jpg?s=612x612&w=is&k=20&c=_vTRYA0zFW5SqlQxol4xzKkia5L8rgPyDnO6PticnsU=">
                      <article class="menu-info">
                         <h3>Шапки, рукавички</h3>
-                        <p class="menu-text">Різних колярів та прентів</p>
+                        <p class="menu-text">Різних кольорів та принтів</p>
                         <p class="sallary"> 250 грн-400 грн</p>
                         <a class="order" href="">Замовити</a>
                     </article>
